@@ -1,6 +1,7 @@
 ggplot 0.6
 ----------------------------------------
 
+  * all size measurements (now lines and text as well) are measured in mm, lines/paths default to paths 0.5mm wide
   * size legends resize to avoid overlaps
   * preliminary legend merging code:
      * consequence: legend type no longer specified in scale (e.g. size, identity, manual), but derived from geoms used
